syntax = "proto3";

option go_package = "github.com/yuriykis/microblocknet";

service Node {
  rpc Handshake(Version) returns (Version);
  rpc NewTransaction(Transaction) returns (Transaction);
  rpc NewBlock(Block) returns (Block);
}

message Version {
  string version = 1;
  int32 height = 2;
  string listen_address = 3;
  repeated string peers = 4;
}

message Block {
  Header header = 1;
  repeated Transaction transactions = 2;
  bytes public_key = 3;
  bytes signature = 4;
}

message Header {
  int32 version = 1;
  int32 height = 2;
  string prev_block_hash = 3;
  string merkle_root = 4;
  int32 timestamp = 5;
  string hash = 6;
}

message TxInput {
  string tx_id = 1;
  int32 out_index = 2;
  string signature = 3;
}

message TxOutput {
  int32 value = 1;
  string address = 2;
}

message Transaction {
  string id = 1;
  repeated TxInput inputs = 2;
  repeated TxOutput outputs = 3;
}